--- a/src/app/ads/ads.component.css
+++ b/src/app/ads/ads.component.css
@@ -12,3 +12,26 @@ line-height: 60px;
 
 color: #000000;
 }
+
+.bg-tviko{
+    background-image: '';
+}
+
+#goto {
+    background-color:#D9A575;
+    color: black;
+    text-decoration: none;
+    width: auto;
+    padding: 15px;
+    margin-top: 15px;
+ 
+
+font-family: 'Playfair Display';
+font-style: normal;
+font-weight: 700;
+font-size: 20px;
+line-height: 27px;
+/* identical to box height */
+
+letter-spacing: 0.05em;
+}
