Adding divider + 2nd category

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -308,4 +308,6 @@
 <router-outlet>  
   <app-slider></app-slider>
   <app-ads></app-ads>
+  <app-divider></app-divider>
+  <app-ads2></app-ads2>
 </router-outlet>
