--- a/src/app/ads3/ads3.component.css
+++ b/src/app/ads3/ads3.component.css
@@ -1,23 +1,19 @@
-h1{
-    position: relative;
- 
-
+.bg-construction{
+    background-image: url('../../assets/bg-construct.png');
+    min-height: 420px;
+    background-repeat: no-repeat;
+    background-position: right 0px top 5px;
+    overflow: visible;
+    
+}
+h1{ 
 font-family: 'Playfair Display';
 font-style: normal;
 font-weight: 600;
 font-size: 45px;
 line-height: 60px;
 padding-left: 3%;
-/* identical to box height */
-
-
-color: #000000;
-}
-
-.bg-tviko{
-    background-image: url('../../assets/tviko-left.jpg');
-    background-repeat: no-repeat;
-    background-position: bottom 20px left 0px;
+vertical-align: middle;
 }
 
 #goto {
@@ -32,17 +28,13 @@ color: #000000;
 font-family: 'Playfair Display';
 font-style: normal;
 font-weight: 700;
-font-size: 1.2rem; 
+font-size: 2rem; 
 /* identical to box height */
 
 letter-spacing: 0.05em;
 }
-
 @media only screen and (max-width: 600px) {
     h1{
       font-size: 2rem;
-    }
-    #goto{
-        font-size: 1rem ;
     }
   }
