--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -306,8 +306,5 @@
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
 <router-outlet>  
-  <app-slider></app-slider>
-  <app-ads></app-ads>
-  <app-divider></app-divider>
-  <app-ads2></app-ads2>
+  <app-home></app-home>
 </router-outlet>
