--- a/src/app/ads3/ads3.component.css
+++ b/src/app/ads3/ads3.component.css
@@ -28,10 +28,15 @@ vertical-align: middle;
 font-family: 'Playfair Display';
 font-style: normal;
 font-weight: 700;
-font-size: 2rem; 
+font-size: 1.2rem; 
 /* identical to box height */
 
-letter-spacing: 0.05em;
+letter-spacing: 0.05em; 
+transition: 0.3s;
+}
+#goto:hover{
+    background-color: transparent;
+    border: solid 1px #D9A575; 
 }
 @media only screen and (max-width: 600px) {
     h1{
