--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,5 +3,5 @@
   <app-ads></app-ads>
   <app-divider></app-divider>
   <app-ads2></app-ads2>
-  <app-ads3></app-ads3>
-  <app-services></app-services>
+  <app-ads3></app-ads3> 
+  <app-contact-comp></app-contact-comp>
