--- a/src/app/ads/ads.component.html
+++ b/src/app/ads/ads.component.html
@@ -1,5 +1,5 @@
  
-  <div class="container-fluid pb-5 bg-tviko">
+  <div class="container-fluid pb-5 ">
   <div class="row">
     <div class="col p-5 w-50 mx-auto">
         <h1> {{title}} </h1>
@@ -7,7 +7,7 @@
   </div> 
     
  
-  <div class="row">
+  <div class="row w-75 mx-auto">
     <div class="col-sm-6 col-lg-3 d-flex justify-content-center" *ngFor="let ad of ads">
         <div class="card my-2" style="width: 18rem;">
             <img class="card-img-top" [src]="ad.img" alt="Card image cap">
@@ -21,7 +21,7 @@
     </div>      
 
     <div class="d-flex justify-content-center">
-        <a href="/a" id="goto">
+        <a href="/a" id="goto" class="px-5">
             POGLEDAJTE SVE NEKRETNINE <svg width="36" height="33" viewBox="0 0 36 33" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
               <rect width="36" height="33" fill="url(#pattern0)"/>
               <defs>
