--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light bg-brown">
-  <div class="container-fluid">
-    <img src="../assets/logo.png" class="logo" />
+  <div class="container-fluid">  <a href="/" class="logo"> 
+    <img src="../assets/logo.png" class="logo" /> </a>
     <button class="navbar-toggler" type="button" data-mdb-toggle="collapse" data-mdb-target="#navbarText"
       aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
       <i class="fas fa-bars"></i>
@@ -17,7 +17,7 @@
             <a class="nav-link" href="#">KONTAKT</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">NEKRETNINE</a>
+            <a class="nav-link selected" href="#">NEKRETNINE</a>
           </li>
       </ul>
       <span class="navbar-text mx-auto">
