--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,4 +4,5 @@
   <app-divider></app-divider>
   <app-ads2></app-ads2>
   <app-ads3></app-ads3> 
+  <app-services></app-services>
   <app-contact-comp></app-contact-comp>
