--- a/src/app/ads/ads.component.html
+++ b/src/app/ads/ads.component.html
@@ -22,7 +22,7 @@
 
     <div class="d-flex justify-content-center">
         <a href="/a" id="goto" class="px-5">
-            POGLEDAJTE SVE NEKRETNINE <svg width="36" height="33" viewBox="0 0 36 33" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+            POGLEDAJTE SVE NEKRETNINE <svg class="arrow" width="36" height="33" viewBox="0 0 36 33" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
               <rect width="36" height="33" fill="url(#pattern0)"/>
               <defs>
               <pattern id="pattern0" patternContentUnits="objectBoundingBox" width="1" height="1">
