--- a/src/app/ads3/ads3.component.css
+++ b/src/app/ads3/ads3.component.css
@@ -1,6 +1,6 @@
 .bg-construction{
     background-image: url('../../assets/bg-construct.png');
-    min-height: 420px;
+    min-height: 720px;
     background-repeat: no-repeat;
     background-position: right 0px top 5px;
     overflow: visible;
@@ -35,8 +35,7 @@ letter-spacing: 0.05em;
 transition: 0.3s;
 }
 #goto:hover{
-    background-color: transparent;
-    border: solid 1px #D9A575; 
+    background: #A65F23; 
 }
 @media only screen and (max-width: 600px) {
     h1{
