--- a/src/app/contact-comp/contact-comp.component.html
+++ b/src/app/contact-comp/contact-comp.component.html
@@ -1,10 +1,77 @@
-<div class="container-fluid">
-    <div class="row px-5">
-        <h1>
-    KONTAKTIRAJTE NAS
-</h1>
-<p>
-    Napravite prvi korak ka nekretnini iz snova
-</p>
-    </div>
-</div>
+ 
+        <div class="row  mt-5 ">
+         
+             <div class="col-lg-6 col-sm-12 mb-5 px-5">
+                <h1>KONTAKTIRAJTE NAS</h1>
+                <p>
+                    Napravite prvi korak ka nekretnini iz snova
+                </p>
+                <h2>email forma</h2>
+                <div class="w-100 mt-5">
+                    <form>
+                        <div class="row">
+                          <div class="col">
+                            <label>Ime</label>
+                            <input type="text" class="form-control" placeholder="Unesite ime">
+                          </div>
+                          <div class="col">
+                            <label>Prezime</label>
+                            <input type="text" class="form-control" placeholder="Unesite prezime">
+                          </div>
+                        </div>
+                        <div class="row">
+                            <div class="col">
+                                <label>Email</label>
+                                <input type="text" class="form-control" placeholder="Unesite email adresu">
+                              </div>
+                        </div>
+                        <div class="row">
+                            <div class="col">
+                                <label>Broj telefona</label>
+                                <input type="text" class="form-control" placeholder="Unesite broj telefona">
+                              </div>
+                        </div>
+                        <div class="row">
+                            <div class="col">
+                                <label>Vaša poruka</label>
+                                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                              </div>
+                        </div>
+                      </form>
+                      
+                </div> 
+             </div>
+             <div class="col-lg-6 col-sm-12 mt-5 pt-5">
+                <img src="../../assets/bgcontact.png" class="bg-contact">
+                <div class="w-75">
+                    <h2>KONTAKT TELEFON</h2>
+                    <h3>
+                        +387 (0)65 379 162 <br>
+    +387 (0)66 940 924
+                    </h3>
+                </div>
+                <div class="mt-5 pt-5">
+                    <h2>DRUŠTVENE MREŽE</h2>
+                    <div class="row  w-50 ">
+                        <div class="col ">
+                            <img src="../../assets/fb.png" height="48" class="social" />
+                            <img src="../../assets/whatsap.png" height="48" class="social" />
+                            <img src="../../assets/ig.png" height="48" class="social" />
+                            <div class="w-100 mt-5 pt-5">
+                                <h2>RADNO VRIJEME</h2>
+                                <h3> Radnim danom:   07:00 - 17:00 <br>
+                                    Subota:                 07:00 - 15:00
+                                </h3>
+                            </div>
+                            
+                        </div>
+                       
+                      
+                    </div>
+                </div>
+             </div>
+             
+ 
+        </div>
+ 
+     
