--- a/src/app/services/services.component.html
+++ b/src/app/services/services.component.html
@@ -14,7 +14,7 @@
               
         </div>
     </div>
-    <div class="row pt-5 mx-auto d-flex justify-content-center  w-75 bg-numbers">
+    <div class="container-fluid pt-5  bg-numbers">
         <div class="row w-75 mx-auto py-5">
             <div class="col borderRight">
                 <h1 class="num" >25</h1>
@@ -36,9 +36,11 @@
         </div>
         <div class="d-flex justify-content-center my-4">
 
-            
-        <img src="../../assets/maps.jpg" class="img-fluid"/>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d23451.524863552906!2d18.329201349473387!3d42.71556412090101!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x134c692fa1cc47b7%3A0x24bb6f016f857b65!2zVnVrYSBLYXJhZMW-acSHYSAyMywg0KLRgNC10LHQuNGa0LU!5e0!3m2!1ssr!2sba!4v1675949344850!5m2!1ssr!2sba" width="80%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
+        
+<app-contact-comp></app-contact-comp>
     </div>
-</div>
+    
  
+</div>
