--- a/src/app/ads2/ads2.component.css
+++ b/src/app/ads2/ads2.component.css
@@ -40,8 +40,10 @@ transition: 0.3s;
 }
 
 #goto:hover{
-    background-color: transparent;
-    border: solid 1px #D9A575; 
+    
+  background: #A65F23;   
+  
+  letter-spacing: 0.08em;   
 }
 
 @media only screen and (max-width: 600px) {
