--- a/src/app/category/category.component.html
+++ b/src/app/category/category.component.html
@@ -27,35 +27,37 @@
 
 <div class="container-fluid pt-5 mt-5 w-75">
 <div class="mx-auto px-5 mx-5">
+    
     <div class="row">
         
         <div class="col-sm-6 col-lg-3 d-flex justify-content-center" *ngFor="let result of results | slice:startIndex:endIndex">
-            <div class="card my-2" style="width: 18rem;">
-                <img class="card-img-top" src="https://via.placeholder.com/150?Text=tovika" alt="Card image cap">
+            <div class="card my-2 AD" style="width: 18rem;">
+               <a href="/adInfo?id={{result.id}}" class="AD">
+                <img class="card-img-top" [src]="result.mainImage" alt="Card image cap">
                 <div class="card-body">
-                  <h5 class="card-title">{{result.name}} m2</h5>
-                  <p class="card-text">{{result.email}}</p> 
+                  <h5 class="card-title">{{result.squarefeet}} m2</h5>
+                  <p class="card-text">{{result.adress}}</p> 
                 </div>
+               </a>
               </div>
         </div> 
     </div>
 </div>
 <div class="container-fluid">
-    <div class="row mx-auto w-75 my-5">
-        <div class="col"  >
-            <a   (click)="previousPage()" [ngClass]="{'disabled': catOneSelected}" > Previous </a>
+    <div class="row mx-auto w-75 my-5 text-center">
+        <div class="col"  *ngIf="currentPage !== 1" >
+            <a   (click)="previousPage()"  > Previous </a>
         </div>
         
-        <div class="col">
-            <a   (click)="nextPage()" [ngClass]="{'selected': catTwoSelected}">Next</a>
+        <div class="col" >
+            <a   (click)="nextPage()" >Next</a>
         </div>
         
         
+</div>
+<div class="footer" layout-fill>
+    <app-footer></app-footer>
 </div>
 </div> 
-<div class="container-fluid w-100">
-
-  <app-footer></app-footer>
-</div>
-  
+ 
   
