--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,16 +8,16 @@
     <div class="collapse navbar-collapse" id="navbarText">
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/category?id=1">POČETNA</a>
+          <a class="nav-link active" aria-current="page" href="/">POČETNA</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">O NAMA</a>
+          <a class="nav-link" href="/About-Us">O NAMA</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">KONTAKT</a>
+            <a class="nav-link" href="/contact">KONTAKT</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link selected" href="#">NEKRETNINE</a>
+            <a class="nav-link selected" href="/category?id=1">NEKRETNINE</a>
           </li>
       </ul>
       <span class="navbar-text mx-auto">
