--- a/src/app/ads/ads.component.css
+++ b/src/app/ads/ads.component.css
@@ -1,66 +1,312 @@
-h1{
-    position: relative;
- 
+.container {
+  max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+}
 
-font-family: 'Playfair Display';
+/* ///////////////////////////// */
+
+.none {
+  display: none;
+}
+
+.section-h {
+  margin-top: 40px;
+  margin-bottom: 10px;
+  font-weight: 700;
+  font-size: 45px;
+}
+
+.section2 {
+  position: relative;
+  overflow: hidden;
+}
+
+.nek-izvan-tr {
+  margin-top: 30px;
+}
+
+.ad-dec {
+  display: flex;
+  justify-content: center;
+  margin: 40px auto;
+  width: 100%;
+  height: auto;
+}
+
+.ad {
+  max-width: 250px;
+  border: 2px solid #e3e3e3;
+  overflow: hidden;
+  font-family: "Playfair Display", serif;
+  margin: 20px 10px;
+  background-color: #fff;
+}
+
+.ad:hover {
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  transition: 00.3s;
+}
+
+.ad img {
+  height: 50%;
+  width: 100%;
+}
+
+.square-feet-num {
+  color: #000;
+  font-size: 27px;
+  font-weight: 700;
+  font-family: "Montserrat", sans-serif;
+  border: 2px solid #cd8b53;
+  width: fit-content;
+  padding: 0px 5px;
+  margin: 15px 0px 15px 20px;
+}
+
+.ad-adress {
+  font-family: "Playfair Display", serif;
+  font-weight: 700;
+  font-size: 18px;
+  margin-left: 20px;
+  margin-top: 15px;
+  margin-bottom: 30px;
+  color: #000;
+}
+
+.ad-wrapper {
+  margin-top: 70px;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  margin-bottom: 55px;
+}
+
+.action-btn {
+  width: 400px;
+  max-height: 50px;
+  padding: 13px 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #d9a575;
+  border: none;
+  font-family: "Playfair Display", serif;
+  transition: 0.2s;
+  margin-left: auto;
+  margin-right: auto;
+  color: black;
+}
+
+.action-btn:hover {
+  width: 480px;
+  background-color: #cd8b53;
+}
+
+.nek-u-izg {
+  position: relative;
+}
+
+.ads-back {
+  position: absolute;
+  overflow-x: hidden;
+  overflow: hidden;
+  right: -20%;
+  bottom: 10%;
+  z-index: -100;
+}
+
+.ad-u-izg {
+  position: relative;
+}
+
+.ad-card-dec {
+  position: absolute;
+  left: -40px;
+  bottom: -10%;
+}
+
+/***/
+
+@media only screen and (max-width: 837px) {
+  .ad-wrapper {
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .action-btn {
+    width: 80%;
+  }
+
+  .action-btn:hover {
+    width: 90%;
+  }
+
+  .section-h {
+    font-size: 35px;
+  }
+}
+
+@media only screen and (max-width: 563px) {
+  .ad {
+    max-width: 200px;
+
+    margin: 10px 5px;
+  }
+
+  .square-feet-num {
+    color: #000;
+    font-size: 22px;
+
+    padding: 0px 5px;
+    margin: 15px 0px 15px 20px;
+  }
+
+  .ad-adress {
+    font-size: 16px;
+    margin-left: 20px;
+    margin-top: 15px;
+    margin-bottom: 30px;
+  }
+}
+
+@media only screen and (max-width: 443px) {
+  .ad {
+    max-width: 150px;
+    margin: 10px 5px;
+  }
+
+  .square-feet-num {
+    color: #000;
+    font-size: 19px;
+
+    padding: 0px 5px;
+    margin: 15px 0px 15px 10px;
+  }
+
+  .ad-adress {
+    font-size: 14px;
+    text-align: center;
+    margin-left: 0;
+    margin-top: 15px;
+    margin-bottom: 30px;
+  }
+}
+
+@media only screen and (max-width: 343px) {
+  .ad {
+    max-width: 120px;
+    margin: 10px 5px;
+  }
+
+  .square-feet-num {
+    color: #000;
+    font-size: 17px;
+
+    padding: 0px 5px;
+    margin: 15px 0px 15px 10px;
+  }
+
+  .ad-adress {
+    font-size: 12px;
+    text-align: center;
+    margin-left: 0;
+    margin-top: 15px;
+    margin-bottom: 30px;
+  }
+}
+
+@media only screen and (max-width: 300px) {
+  .action-btn {
+    width: 80%;
+    font-size: 12px;
+  }
+
+  .action-btn:hover {
+    width: 90%;
+  }
+}
+
+@media only screen and (max-width: 283px) {
+  .ad {
+    max-width: 100px;
+    margin: 10px 5px;
+  }
+
+  .square-feet-num {
+    color: #000;
+    font-size: 15px;
+
+    padding: 0px 5px;
+    margin: 15px 0px 15px 10px;
+  }
+
+  .ad-adress {
+    font-size: 10px;
+    text-align: center;
+    margin-left: 0;
+    margin-top: 15px;
+    margin-bottom: 30px;
+  }
+}
+
+@media only screen and (max-width: 243px) {
+  .section-h {
+    font-size: 25px;
+  }
+
+  .ad {
+    max-width: 85px;
+    margin: 10px 5px;
+  }
+
+  .square-feet-num {
+    color: #000;
+    font-size: 12px;
+
+    padding: 0px 5px;
+    margin: 15px 0px 15px 10px;
+  }
+
+  .ad-adress {
+    font-size: 8px;
+    text-align: center;
+    margin-left: 0;
+    margin-top: 15px;
+    margin-bottom: 30px;
+  }
+}
+
+@media only screen and (max-width: 214px) {
+  .ad {
+    max-width: 100%;
+    margin: 10px 5px;
+  }
+
+  .square-feet-num {
+    color: #000;
+    font-size: 14px;
+
+    padding: 0px 5px;
+    margin: 15px 0px 15px 10px;
+  }
+
+  .ad-adress {
+    font-size: 12px;
+    text-align: left;
+    margin-left: 0;
+    margin-top: 15px;
+    margin-left: 10px;
+    margin-bottom: 30px;
+  }
+}
+.section-h{
+  font-family: 'Playfair Display';
 font-style: normal;
 font-weight: 600;
 font-size: 45px;
 line-height: 60px;
-padding-left: 3%;
-/* identical to box height */
 
-
-color: #000000;
 }
-@media only screen and (max-width: 600px) {
-    h1{
-      font-size: 2rem;
-    }
-  }
-.bg-tviko{
-    background-image: url('../../assets/tviko-left.jpg');
-    background-repeat: no-repeat;
-    background-position: bottom 20px left 0px;
-}
-
-#goto {
-    background-color:#D9A575;
-    color: black;
-    text-decoration: none;
-    width: auto;
-    padding: 15px;
-    margin-top: 50px;
-    text-align: center;
-font-family: 'Playfair Display';
-font-style: normal;
-font-weight: 700;
-font-size: 1.2rem; 
-/* identical to box height */
-letter-spacing: 0.05em; 
-transition: 500ms;
-}
-#goto:hover{ 
-  background: #A65F23;   
-  
-letter-spacing: 0.08em;  
-}
-@media only screen and (max-width: 600px) {
-    h1{
-      font-size: 2rem;
-    }
-    #goto{
-        font-size: 1rem ;
-    }
-  }
-  .card{
-
-    transition: 600ms;
-  }
-  .card:hover{
-    scale: 1.1;transform: rotate(1deg);
-  }
-  svg{
-    margin-left: 20px;
-  }
-  
