--- a/src/app/category/category.component.css
+++ b/src/app/category/category.component.css
@@ -36,3 +36,37 @@ color: #000000;
 
     background: #A65F23;
 }
+.footer{
+     
+    margin: 0 auto;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+}
+.AD{
+    background-color: transparent;
+    width: 100%;
+    height: 100%;
+    transition: 500ms;
+}
+.AD:hover{
+    background-color: transparent;
+    width: 100%;
+    height: 100%;
+    scale: 1.05;
+}
+.card-title{
+    font-family: 'Montserrat';
+font-style: normal;
+font-weight: 700;
+font-size: 27px;
+line-height: 33px;
+}
+.card-text{
+    font-family: 'Playfair Display';
+font-style: normal;
+font-weight: 500;
+font-size: 18px;
+line-height: 24px;
+}
