beta version updated navbar

--- a/src/app/ads/ads.component.html
+++ b/src/app/ads/ads.component.html
@@ -59,7 +59,7 @@
       NOVE NEKRETNINE U IZGRADNJI USKORO...
     </h2>
 
-    <div class="nek-u-izg none">
+    <div class="nek-u-izg " [ngClass]="{'none': isCategoryThreeEmpty}">
       <h2 class="section-h">NEKRETNINE U IZGRADNJI</h2>
 
       <div class="ad-wrapper ad-u-izg">
