--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,38 +1,137 @@
-.bg-brown{
-    background-color: #EBE6E4  !important;
-}
-.logo{
-    margin-left: 20%;
-}
-.social-logo{ 
-   display: inline-block; 
-   margin-right: 20px;
-   flex-direction: row;
-}
-.nav-item a{
-    
-    font-family: 'Playfair Display';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 17px;
-    line-height: 23px;
-    /* identical to box height */
-    
+
+.container {
+    max-width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  
+  /*  ////////////////////////////////////////////////////// */
+  
+  .navbar {
+    padding: 10px;
+    background-color: #ebe6e4;
+  }
+  
+  .nav-wrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  
+  .nav-link {
+    text-decoration: none;
+    color: #000;
+    margin-right: 30px;
+    padding: 10px 20px;
+    letter-spacing: 1px;
+    transition: 00.2s;
+    display: inline;
+  }
+  
+  .nav-link:hover {
+    background-color: #231f20;
+    color: #fff;
+  }
+  
+  .fb-space {
+    margin-right: 15px;
+  }
+  
+  .burger {
+    display: none;
+  }
+  
+  .res-link {
+    text-decoration: none;
+    display: block;
+    color: #000;
+    padding: 10px 20px;
+    letter-spacing: 1px;
+    transition: 00.2s;
+    margin-bottom: 15px;
     text-align: center;
-    letter-spacing: 0.05em;
+  }
+  
+  .res-link:hover {
+    background-color: #231f20;
+    color: #fff;
+  }
+  
+  .last-link {
+    background-color: #231f20;
+    color: #fff;
+  }
+  
+  .last-link:hover {
+    color: #000;
+    background-color: #cccccc;
+  }
+  
+  .close {
+    text-align: end;
+    font-size: 25px;
+    font-family: sans-serif;
+  }
+  
+  .overlay {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    background-color: #000;
+    opacity: 30%;
+    z-index: 4;
+  }
+  
+  .responsive-menu {
+    position: fixed;
+    height: 50%;
+    width: 50%;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    transition: 0.3s;
+    background-color: #ebe6e4;
+    z-index: 5;
+    animation: 1.5s cubic-bezier(0.25, 1, 0.3, 1) square-in-bottom-left both;
+  }
+  
+  @keyframes square-in-bottom-left {
+    from {
+      clip-path: inset(0 0 100% 100%);
+    }
+    to {
+      clip-path: inset(0 0 0 0);
+    }
+  }
+  
+  .none {
+    display: none;
+  }
+  
+  @media only screen and (max-width: 850px) {
+    .burger {
+      display: block;
+    }
     
-    margin-left: 29px;
-    color: #000000;
-}
-.nav-item a:hover,.selected {
-    font-family: 'Playfair Display';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 17px;
-    line-height: 23px;
-    /* identical to box height */
-    text-align: center;
-    letter-spacing: 0.05em;
-    background-color: #000000;
-    color: #ffffff !important ;
-}
+    .nav-socials,
+    .nav-links {
+      display: none;
+    }
+ 
+  }
+  
+  @media only screen and (max-width: 270px) {
+    .res-link {
+      font-size: 14px;
+      overflow: visible;
+    }
+  
+    .responsive-menu {
+      width: 70%;
+    }
+  }
+  
