--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,35 +1,35 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light bg-brown">
-  <div class="container-fluid">  <a href="/" class="logo"> 
-    <img src="../assets/logo.png" class="logo" /> </a>
-    <button class="navbar-toggler" type="button" data-mdb-toggle="collapse" data-mdb-target="#navbarText"
-      aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-      <i class="fas fa-bars"></i>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarText">
-      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/">POČETNA</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/About-Us">O NAMA</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="/contact">KONTAKT</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link selected" href="/category?id=1">NEKRETNINE</a>
-          </li>
-      </ul>
-      <span class="navbar-text mx-auto">
-        <a href="" class="social-logo">
-          <img src="../assets/ig.png" class="px-2" />
-
-        </a>
-        <a href="" class="social-logo">
-
-          <img src="../assets/fb.png" class="ml-2" />
-        </a>
-      </span>
-    </div>
-  </div>
-</nav>
+   <nav class="navbar">
+      <div class="container nav-wrapper">
+        <div class="nav-logo">
+          <a href="#" style="text-decoration: none">
+            <img src="../../assets/TVIKO – kopija (1) 2.png" alt="navLogo" />
+          </a>
+        </div>
+        <div class="nav-links">
+          <a href="/" class="nav-link">POČETNA</a>
+          <a href="/About-Us" class="nav-link">O NAMA</a>
+          <a href="/contact" class="nav-link">KONTAKT</a>
+          <a href="/category?id=1" class="nav-link  last-link">NEKRETNINE</a>
+        </div>
+        <div class="nav-socials">
+          <img
+            src="../../assets/facebook.png"
+            class="fb-space"
+            alt="facebook nav"
+          />
+          <img src="../../assets/instagram (1).png" alt="instagram nav" />
+        </div>
+        <div class="burger" (click)="toggleResponsiveMenu()">
+          <img src="../../assets/burger.png" alt="burger" />
+        </div>
+      </div>
+      <div class="responsive-menu none"  [ngClass]="{'none': !isMenuOpen}" >
+        <a href="#" class="res-link close" (click)="toggleResponsiveMenu()">X</a>
+        <a href="/" class="res-link">POČETNA</a>
+        <a href="/About-Us" class="res-link">O NAMA</a>
+        <a href="/contact" class="res-link">KONTAKT</a>
+        <a href="/category?id=1" class="res-link last-link">NEKRETNINE</a>
+      </div>
+      <div class="overlay none"  [ngClass]="{'none': !isMenuOpen}" (click)="toggleResponsiveMenu()"></div>
+    </nav>
+ 
