--- a/src/app/ad-infos/ad-infos.component.html
+++ b/src/app/ad-infos/ad-infos.component.html
@@ -10,11 +10,11 @@
   
   <app-divider></app-divider>
 
-  <div class="container-fluid">
+  <div class="container-fluid" *ngIf="ad !== undefined">
     <div class="row mx-5">
-        <div class="col-lg-4">
+        <div class="col-lg-4" >
             <owl-carousel-o [options]="customOptions" >
-                <ng-container *ngFor="let slide of dynamicSlides">
+                <ng-container *ngFor="let slide of slidesStore">
                   <ng-template carouselSlide >
                     <img [src]="slide.src" [alt]="slide.alt" [title]="slide.title">
                   </ng-template>
@@ -65,7 +65,7 @@
               
             </div>
         
-           </div> <div class="col-4">
+           </div> <div class="col-4" *ngIf="ad.structure !== null" >
             <h2 class="fs-3">
                 Struktura soba
             </h2>
@@ -106,3 +106,4 @@
            </div>
     </div>
   </div>
+  <app-footer></app-footer>
