--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,3 +1,9 @@
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: "Playfair Display", serif;
+}
 
 .container {
     max-width: 1200px;
@@ -74,7 +80,7 @@
   }
   
   .overlay {
-    position: absolute;
+    position: fixed;
     height: 100%;
     width: 100%;
     top: 0;
@@ -88,7 +94,7 @@
   
   .responsive-menu {
     position: fixed;
-    height: 50%;
+    height: 100%;
     width: 50%;
     right: 0;
     top: 0;
