--- a/src/app/contact-comp/contact-comp.component.html
+++ b/src/app/contact-comp/contact-comp.component.html
@@ -43,21 +43,21 @@
              </div>
              <div class="col-lg-6 col-sm-12 mt-5 pt-5">
                 <img src="../../assets/bgcontact.png" class="bg-contact">
-                <div class="w-75">
+                <div class=" mobileContact ">
                     <h2>KONTAKT TELEFON</h2>
                     <h3>
                         +387 (0)65 379 162 <br>
     +387 (0)66 940 924
                     </h3>
                 </div>
-                <div class="mt-5 pt-5">
+                <div class="mt-5 pt-5 mobileContact">
                     <h2>DRUŠTVENE MREŽE</h2>
-                    <div class="row  w-50 ">
+                    <div class="row  socialIcons ">
                         <div class="col ">
                             <img src="../../assets/fb.png" height="48" class="social" />
                             <img src="../../assets/whatsap.png" height="48" class="social" />
                             <img src="../../assets/ig.png" height="48" class="social" />
-                            <div class="w-100 mt-5 pt-5">
+                            <div class="w-100 my-5 py-5">
                                 <h2>RADNO VRIJEME</h2>
                                 <h3> Radnim danom:   07:00 - 17:00 <br>
                                     Subota:                 07:00 - 15:00
