--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -24,7 +24,7 @@
         </div>
       </div>
       <div class="responsive-menu none"  [ngClass]="{'none': !isMenuOpen}" >
-        <a href="#" class="res-link close" (click)="toggleResponsiveMenu()">X</a>
+        <a class="res-link close" (click)="toggleResponsiveMenu()">X</a>
         <a href="/" class="res-link">POČETNA</a>
         <a href="/About-Us" class="res-link">O NAMA</a>
         <a href="/contact" class="res-link">KONTAKT</a>
