--- a/src/app/ad-infos/ad-infos.component.html
+++ b/src/app/ad-infos/ad-infos.component.html
@@ -9,14 +9,20 @@
   </main>
   
   <app-divider></app-divider>
-  <div id="myModal" class="modal" [ngClass]="{'d-block' : isOpened }"  >
+  <div id="myModal" class="modal" [ngClass]="{'d-block' : isOpened }" >
     <span class="close" (click)="closeModal()" >&times;</span>
-    <img class="modal-content"  src="{{imagePreview}}">
+    <img class="modal-content"  src="{{imagePreview}}" (click)="nextImage()" > 
+    <div class="row text-center  mx-auto w-100">
+        <div class="row d-inline">
+            <a (click)="prevImage()"  class="previous round">&#8249;</a>
+<a  (click)="nextImage()" class="next round">&#8250;</a>
+        </div>
+    </div>
 </div>
   <div class="container-fluid" *ngIf="ad !== undefined">
 
     <div class="row mx-5">
-        <div class="col-lg-4" >
+        <div class="col-lg-4 py-4" >
             <owl-carousel-o [options]="customOptions"  >
                 <ng-container *ngFor="let slide of slidesStore">
                   <ng-template carouselSlide >
@@ -25,7 +31,7 @@
                 </ng-container>
               </owl-carousel-o>
         </div> 
-        <div class="col-4">
+        <div class="col-lg-4 col-12">
             <div class="sf mx-auto   w-50">
                 <h1 class="py-1 m-1">
                     {{ad.squarefeet}} m2 
@@ -46,9 +52,9 @@
                 <h2 class="py-1 mt-3 rooms">
                     {{ad.rooms}} 
                 </h2>          <h2 class="py-1 mt-3 stage">
-                    {{ad.stage}} 
+                   Stage : {{ad.stage}} 
                 </h2> 
-                <div class="w-75 pt-5 mt-5">
+                <div class="w-75  ">
                     <h2 style="font-family: 'Playfair Display';
                     font-style: normal;
                     font-weight: 500;
@@ -69,11 +75,11 @@
               
             </div>
         
-           </div> <div class="col-4" *ngIf="ad.structure !== null" >
+           </div> <div class="col-lg-4 col-12 strucStyle" *ngIf="ad.structure !== null" >
             <h2 class="fs-3">
                 Struktura soba
             </h2>
-            <div class="row w-75">
+            <div class="row w-75 divStruct">
                 <div class="col-6">
                     <h1 class="StructureText">Prostorije</h1>
                 </div>
@@ -100,6 +106,12 @@
                 </div><div class="col-6">
                     <h1 class="StructureElement other">{{ad.structure.Kroom}} m²</h1>
                 </div>
+                <div class="col-6">
+                    <h1 class="StructureElement other">Kupatilo</h1>
+                </div><div class="col-6">
+                    <h1 class="StructureElement other">{{ad.structure.Kroom}} m²</h1>
+                </div>
+                
                 <div class="col-6">
                     <h1 class="StructureElement">Ukupno:</h1>
                 </div><div class="col-6">
