--- a/src/app/ads/ads.component.html
+++ b/src/app/ads/ads.component.html
@@ -72,7 +72,7 @@
               
             />
             <div class="square-feet-num">{{ad3.squarefeet}} m2</div>
-            <div class="ad-adress">{{ad3.adress}}</div>
+            <div class="ad-adress text-nowrap">{{ad3.adress}}</div>
           </a>
         </div>
       </div>
