--- a/src/app/contact-comp/contact-comp.component.html
+++ b/src/app/contact-comp/contact-comp.component.html
@@ -1,77 +1,87 @@
- 
-        <div class="row  mt-5 ">
-         
-             <div class="col-lg-6 col-sm-12 mb-5 px-5">
-                <h1>KONTAKTIRAJTE NAS</h1>
-                <p>
-                    Napravite prvi korak ka nekretnini iz snova
-                </p>
-                <h2>email forma</h2>
-                <div class="w-100 mt-5">
-                    <form>
-                        <div class="row">
-                          <div class="col">
-                            <label>Ime</label>
-                            <input type="text" class="form-control" placeholder="Unesite ime">
-                          </div>
-                          <div class="col">
-                            <label>Prezime</label>
-                            <input type="text" class="form-control" placeholder="Unesite prezime">
-                          </div>
-                        </div>
-                        <div class="row">
-                            <div class="col">
-                                <label>Email</label>
-                                <input type="text" class="form-control" placeholder="Unesite email adresu">
-                              </div>
-                        </div>
-                        <div class="row">
-                            <div class="col">
-                                <label>Broj telefona</label>
-                                <input type="text" class="form-control" placeholder="Unesite broj telefona">
-                              </div>
-                        </div>
-                        <div class="row">
-                            <div class="col">
-                                <label>Vaša poruka</label>
-                                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-                              </div>
-                        </div>
-                      </form>
-                      
-                </div> 
-             </div>
-             <div class="col-lg-6 col-sm-12 mt-5 pt-5">
-                <img src="../../assets/bgcontact.png" class="bg-contact">
-                <div class=" mobileContact ">
-                    <h2>KONTAKT TELEFON</h2>
-                    <h3>
-                        +387 (0)65 379 162 <br>
-    +387 (0)66 940 924
-                    </h3>
-                </div>
-                <div class="mt-5 pt-5 mobileContact">
-                    <h2>DRUŠTVENE MREŽE</h2>
-                    <div class="row  socialIcons ">
-                        <div class="col ">
-                            <img src="../../assets/fb.png" height="48" class="social" />
-                            <img src="../../assets/whatsap.png" height="48" class="social" />
-                            <img src="../../assets/ig.png" height="48" class="social" />
-                            <div class="w-100 my-5 py-5">
-                                <h2>RADNO VRIJEME</h2>
-                                <h3> Radnim danom:   07:00 - 17:00 <br>
-                                    Subota:                 07:00 - 15:00
-                                </h3>
-                            </div>
-                            
-                        </div>
-                       
-                      
-                    </div>
-                </div>
-             </div>
-             
- 
+<div class="container">
+    <div class="contact-section">
+      <h2 class="section-h cont-h">KONTAKTIRAJTE NAS</h2>
+      <h3 class="sub-heading">Napravite prvi korak ka nekretnini iz snova</h3>
+      <div class="form-info">
+        <div class="form">
+          <h4 class="info-h">EMAIL FORMA</h4>
+
+          <div class="name-fam">
+            <div>
+              <h3 class="input-h">Ime</h3>
+              <input
+                type="text"
+                placeholder="Unesite ime"
+                class="input name"
+              />
+            </div>
+
+            <div>
+              <h3 class="input-h">Prezime</h3>
+              <input
+                type="text"
+                placeholder="Unesite Prezime"
+                class="input fam-name"
+              />
+            </div>
+          </div>
+
+          <h3 class="input-h">Email</h3>
+          <input
+            type="email"
+            class="input"
+            placeholder="Unesite email adresu"
+          />
+
+          <h3 class="input-h">Broj Telefona</h3>
+          <input
+            type="text"
+            class="input"
+            placeholder="Unesite broj telefona"
+          />
+
+          <h3 class="input-h">Vaša poruka</h3>
+          <input
+            type="text"
+            class="input mess"
+            placeholder="Moja želja je..."
+          />
+
+          <button type="submit" class="email-submit">POŠALJITE</button>
         </div>
- 
-     
+        <div class="info">
+          <div class="informations">
+            <div>
+              <h4 class="info-h">KONTAKT TELEFON</h4>
+              <p class="info-text">+387 (0)65 379 162</p>
+              <p class="info-text">+387 (0)66 940 924</p>
+            </div>
+
+            <div>
+              <h4 class="info-h">DRUŠTVENE MREŽE</h4>
+              <a class="social-cont"
+                ><img src="../../assets/facebook.png" height="36" alt="fb"
+              /></a>
+              <a class="social-cont"
+                ><img src="../../assets/instagram (1).png" height="36" alt="insta"
+              /></a>
+              <a class="social-cont"
+                ><img src="../../assets/whatsap.png" height="36" alt="wa"
+              /></a>
+            </div>
+
+            <div>
+              <h4 class="info-h">KONTAKT TELEFON</h4>
+              <p class="info-text">Radnim danima: 07:00 - 17:00</p>
+              <p class="info-text">Radno vrijeme: 07:00 - 15:00</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <img
+        src="../../assets/collov-home-design-H-1j_s0dhCw-unsplash 1.png"
+        alt="back"
+        class="cont-back"
+      />
+    </div>
+  </div>
