deploy contact and squarefeet

--- a/src/app/ads/ads.component.css
+++ b/src/app/ads/ads.component.css
@@ -55,7 +55,7 @@
 
 .square-feet-num {
   color: #000;
-  font-size: 27px;
+  font-size: 2em;
   font-weight: 700;
   font-family: "Montserrat", sans-serif;
   border: 2px solid #cd8b53;
