--- a/src/app/ads/ads.component.html
+++ b/src/app/ads/ads.component.html
@@ -10,7 +10,7 @@
             alt="ad-photo"
           />
           <div class="square-feet-num">{{ad.squarefeet}} m2</div>
-          <div class="ad-adress">{{ad.adress}}</div>
+          <div class=" ad-adress text-nowrap">{{ad.adress}}</div>
         </a>
       </div>
  
@@ -35,7 +35,7 @@
               alt="ad-photo"
             />
             <div class="square-feet-num">{{ad2.squarefeet}} m2</div>
-            <div class="ad-adress">{{ad2.adress}}</div>
+            <div class=" ad-adress text-nowrap">{{ad2.adress}}</div>
           </a>
         </div>
       </div>
@@ -72,7 +72,7 @@
               
             />
             <div class="square-feet-num">{{ad3.squarefeet}} m2</div>
-            <div class="ad-adress text-nowrap">{{ad3.adress}}</div>
+            <div class=" ad-adress text-nowrap text-nowrap">{{ad3.adress}}</div>
           </a>
         </div>
       </div>
