--- a/src/app/ads/ads.component.html
+++ b/src/app/ads/ads.component.html
@@ -10,7 +10,7 @@
             alt="ad-photo"
           />
           <div class="square-feet-num">{{ad.squarefeet}} m2</div>
-          <div class=" ad-adress text-nowrap">{{ad.adress}}</div>
+          <div class=" ad-adress text-nowrap">{{shortAdress(ad.adress)}}</div>
         </a>
       </div>
  
