--- a/src/app/services/services.component.html
+++ b/src/app/services/services.component.html
@@ -55,7 +55,7 @@
          
 
     </div>
-    <div class="container-fluid mt-5 px-5">
+    <div class="container-fluid mt-5">
 
         <app-contact-comp></app-contact-comp>
     </div>
