--- a/src/app/ad-infos/ad-infos.component.html
+++ b/src/app/ad-infos/ad-infos.component.html
@@ -22,14 +22,17 @@
   <div class="container-fluid" *ngIf="ad !== undefined">
 
     <div class="row mx-5">
-        <div class="col-lg-4 py-4" >
-            <owl-carousel-o [options]="customOptions"  >
-                <ng-container *ngFor="let slide of slidesStore">
-                  <ng-template carouselSlide >
-                    <img [src]="slide.src"   (click)="preview(slide.src);" [alt]="slide.alt" [title]="slide.title" class="imgSlide">
-                  </ng-template>
-                </ng-container>
-              </owl-carousel-o>
+        <div class="col-lg-4 py-4 carrousel " >
+            <div class="carrousel-item">
+                <owl-carousel-o [options]="customOptions"  >
+                    <ng-container *ngFor="let slide of slidesStore">
+                      <ng-template carouselSlide >
+                        <img [src]="slide.src"   (click)="preview(slide.src);" [alt]="slide.alt" [title]="slide.title" class="imgSlide">
+                      </ng-template>
+                    </ng-container>
+                  </owl-carousel-o>
+            </div>
+         
         </div> 
         <div class="col-lg-4 col-12">
             <div class="sf mx-auto   w-50">
@@ -54,7 +57,7 @@
                 </h2>          <h2 class="py-1 mt-3 stage">
                    Stage : {{ad.stage}} 
                 </h2> 
-                <div class="w-75  ">
+                <div class="w-100">
                     <h2 style="font-family: 'Playfair Display';
                     font-style: normal;
                     font-weight: 500;
@@ -66,8 +69,9 @@
                     <p style="font-family: 'Montserrat';
                     font-style: normal;
                     font-weight: 500;
-                    font-size: 19px;
+                    font-size: 14px;
                     line-height: 23px;
+                    width: 100%!important;
                     letter-spacing: 0.1em;
                     
                     color: #000000;"> {{ad.description}}</p>
@@ -98,7 +102,7 @@
                     <h1 class="StructureElement other">{{ad.structure.lRoom}} m²</h1>
                 </div>
                 <div class="col-6">
-                    <h1 class="StructureElement ">Spavaca soba</h1>
+                    <h1 class="StructureElement  ">Spavaca soba</h1>
                 </div><div class="col-6">
                     <h1 class="StructureElement">{{ad.structure.Broom}} m²</h1>
                 </div>  <div class="col-6">
